--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Hubballi', cursive;
   background-color: #f1f5f9;
-  background-image: url(http://www.ideam.gov.co/documents/21021/21135/imagen-101.jpg/7b928e27-2a91-4a3f-a58b-b107c867cf04?t=1423495219687);
+  background-image: url(imagen.jpg)  ;
   font-size: 1.6rem;
 }
 header {
